# mdottyfx

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Grain.h  GrainDelay.cpp  GrainDelay.h  GranularEngine.cpp  GranularEngine.h
Source/Presets/: FactoryPresets.cpp  FactoryPresets.h
Source/UI/: DefaultPage.cpp  DefaultPage.h  GrainControlsPage.cpp  GrainControlsPage.h  MacroKnob.cpp  MacroKnob.h  MdottyLookAndFeel.cpp  MdottyLookAndFeel.h  PresetBrowser.cpp  PresetBrowser.h  XYPad.cpp  XYPad.h
